tests/error/else_at_end.clac
// TEST: expect_compile_error
: noop ;
1 if noop else
